# app-dock

./: .gitignore  CMakeLists.txt  Makefile  README.md
.circleci/: config.yml
.github/workflows/: ci-workflow.yml  codeql-workflow.yml  guidelines_enforcer.yml
app/: .gitignore  Makefile  Makefile.version
app/src/: addr.c  coin.h  coin_ss58.h  coin_standard.h  crypto.c  crypto.h  crypto_helper.c  glyphs.c  glyphs.h  parser.c  parser_impl.c  parser_impl.h  secret.c  substrate_dispatch.c  substrate_dispatch.h  substrate_dispatch_V1.c  substrate_dispatch_V1.h  substrate_dispatch_V2.c  substrate_dispatch_V2.h  substrate_functions_V1.h  substrate_functions_V2.h  substrate_methods.h  substrate_methods_V1.h  substrate_methods_V2.h  substrate_strings.h  substrate_types.c  substrate_types.h  substrate_types_V1.c  substrate_types_V1.h  substrate_types_V2.c  substrate_types_V2.h
app/src/common/: app_main.c  parser_common.h
cmake/gtest/: CMakeLists.txt.gtest.in
docs/: APDUSPEC.md  User guide.md  build.md
fuzz/: run-fuzzers.py
fuzzing/: CMakeLists.txt  coverage.sh  fuzz_app_dock.c  os_mocks.c  run.sh
tests_zemu/: package-lock.json
tests_zemu/tests/: recovery.test.ts  sr25519.test.ts
